--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -51,7 +51,12 @@ ul{
 /* ---------------------------------------------------------- Framework Styles  */
 
 .wrapper{margin: 0 auto; background-color:#eeeff1;}
-.app-screen{ border:1px solid #f4f4f4; height:100%; padding-top:55px; background-color: #eeeff1;}
+
+#appContainer{
+    display: block;
+    position: fixed;
+}
+.app-screen{ border:1px solid #f4f4f4; height:100%; padding-top:55px; background-color: #eeeff1; float:left; opacity:0;}
 
 .row{clear:both; width:100%; padding:10px; display:inline-block;}
 .grid{ float:left; padding:5px;}
@@ -105,12 +110,14 @@ ul{
 
 .top-layer{
     display: block !important;
-    position: absolute;
+    /*position: absolute;*/
     z-index: 91;
     left: auto;
     top: 0;
     width: 100%;
+    opacity:1;
     -webkit-overflow-scrolling: touch;
+
 }
 .second-layer{
     display: block !important;
@@ -120,6 +127,30 @@ ul{
     top: 0;
     width: 100%;
 }
+
+#fader{
+    width:100%;
+    height:100%;
+    position:absolute;
+    z-index:95;
+    background-color:#fff;
+}
+
+.screen-fader-hide{
+    opacity: 0;
+   transition: opacity .5s ease-in-out;
+   -moz-transition: opacity .5s ease-in-out;
+   -webkit-transition: opacity .5s ease-in-out;
+}
+
+.screen-fader-show{
+    opacity: 1;
+   transition: opacity .5s ease-in-out;
+   -moz-transition: opacity .5s ease-in-out;
+   -webkit-transition: opacity .5s ease-in-out;
+}
+
+
 /* ---------------------------------------------------------- Interaction Styles  */
 
 button, input{
@@ -289,7 +320,7 @@ button:focus, textarea:focus{
     background:url('../images/bg-footer.png') bottom repeat-x;
     background-color:#009fe3;
     height: 100%;
-    position: absolute;
+    /*position: absolute;*/
     width:100%;
     padding-top:10px;
 }
@@ -333,6 +364,7 @@ body::-webkit-scrollbar {
     background-color: #009fe2;
     color:#fff;
     width:100%;
+    padding-top:25px;
     -webkit-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
@@ -622,7 +654,7 @@ body::-webkit-scrollbar {
 }
 
 .conversation-stream{
-    margin-bottom:50px;
+    margin-bottom:110px;
 }
 
 .message-box img{
@@ -654,6 +686,10 @@ body::-webkit-scrollbar {
     margin-top: -230px;
 }
 
+.vidHolder-*{
+  padding-bottom:20px;
+}
+
 .bigImageViewer{
     position:fixed;
     top:0;
@@ -666,12 +702,12 @@ body::-webkit-scrollbar {
 .bigImageViewer img{
     width:100%;
     height:auto;
-    margin-top:50px;
+    margin-top:65px;
 }
 
 .bigImageViewer .close{
     position:absolute;
-    top:60px;
+    top:80px;
     right:10px;
     padding:5px;
     border-radius:10px;
@@ -739,7 +775,7 @@ body::-webkit-scrollbar {
 @media (min-width: 680px) {
   
 
-    .wrapper{
+    /*.wrapper{
         text-align: center;
     }
 
