--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -745,6 +745,10 @@ body::-webkit-scrollbar {
     color:white;
 }
 
+.vidHolder{
+    text-align: center;
+}
+
 .videoViewer{
     width: 100%;
     height: 100%;
@@ -756,8 +760,8 @@ body::-webkit-scrollbar {
 }
 
 .videoViewer video{
-  width: 100%;
-max-height: 330px;
+    width: 480px;
+    height:360px;
 }
 
 .videoViewer .close{
@@ -770,7 +774,7 @@ max-height: 330px;
 }
 
 video{
-    height:330px;
+    height:500px;
 }
 .completeIcon{
     width:50px;
