--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -745,23 +745,16 @@ body::-webkit-scrollbar {
     color:white;
 }
 
-.vidHolder{
-    text-align: center;
-}
+
 
 .videoViewer{
     width: 100%;
     height: 100%;
     background-color: #eeeff1;
     position: fixed;
-    top: 0;
+    top:0;
     left: 0;
-    padding-top: 80px;
-}
-
-.videoViewer video{
-    width: 480px;
-    height:360px;
+    text-align: center;
 }
 
 .videoViewer .close{
@@ -773,8 +766,34 @@ body::-webkit-scrollbar {
     text-align: center;
 }
 
+.vidHolder{
+    text-align: center;
+    display: inline-block;
+    margin: 80px auto 0 auto;
+    padding:10px;
+}
+
+.vidHolder button{
+    margin-top: 20px;
+}
+
 video{
-    height:500px;
+    /*
+    height:500px;*/
+    width: 480px;
+    height:320px;
+    position: relative;
+    top: 10px;
+}
+
+@media (max-width: 680px) {
+
+    video{
+
+        width: 100%;
+        height:auto;
+    }
+
 }
 .completeIcon{
     width:50px;
