--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -743,6 +743,7 @@ body::-webkit-scrollbar {
     border:1px solid white;
     font-size:12px;
     color:white;
+    background-image:url('../images/opacity.png');
 }
 
 
