--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -831,6 +831,21 @@ video{
     font-weight: bold;
     padding-top: 3px;
 }
+
+.appPanel{
+    width: 100%;
+    height: 100%;
+    background-color: #eeeff1;
+    position: fixed;
+    top:0;
+    left: 0;
+    text-align: center;
+    padding-top:50px;
+    z-index:5000;
+}
+.appPanel p, .appPanel h2{
+    margin-bottom:10px;
+}
 /* ---------------------------------------------------------- TEMP */
 #global-controls, #simple-controls{
     
