--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -50,7 +50,7 @@ ul{
 
 /* ---------------------------------------------------------- Framework Styles  */
 
-.wrapper{margin: 0 auto; background-color:#eeeff1;}
+.wrapper{margin: 0 auto; background-color:#eeeff1; opacity: 0}
 
 #appContainer{
     display: block;
@@ -335,6 +335,8 @@ button:focus, textarea:focus{
     /*position: absolute;*/
     width:100%;
     padding-top:10px;
+    margin-top: -1px;
+    margin-left: -1px;
 }
 .screen-login input{
     border: none;
@@ -843,7 +845,11 @@ video{
     padding-top:50px;
     z-index:5000;
 }
-.appPanel p, .appPanel h2{
+.appPanel h1, .appPanel h3{
+    margin-bottom:10px;
+}
+
+.appPanel img{
     margin-bottom:10px;
 }
 /* ---------------------------------------------------------- TEMP */
