--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -465,6 +465,7 @@ body::-webkit-scrollbar {
     margin-bottom: 10px;
     clear: both;
     margin-top: 35px;
+    white-space: pre-wrap;
 }
 
 .modIntroImage{
