--- a/www/css/uploader.css
+++ b/www/css/uploader.css
@@ -13,9 +13,10 @@
 }
 
 #preview {
-    width:200px;
+    max-height: 200px;
     margin: 0 auto 10px;
-    clear:both;
+    clear: both;
+    width: auto;
 }
 
 #speed,#remaining {
