--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -204,7 +204,7 @@ button, input{
 
 .text-input .form-error{
     margin-bottom:20px;
-    color:#fff;
+    color:#bdc3c7;
 }
 
 /* Buttons */
@@ -261,8 +261,9 @@ button:focus, textarea:focus{
 }
 
 .form-link{
-    color:white;
+    color:#bdc3c7;
     text-decoration: none;
+    display: block;
 }
 .selectButtonHidden{
       opacity: 0;
@@ -329,8 +330,7 @@ button:focus, textarea:focus{
 /* ----------------------------------------------------------  Styles  */
 
 .screen-login{
-    background:url('../images/bg-footer.png') bottom repeat-x;
-    background-color:#009fe3;
+    background-color:#eeeff1;
     height: 100%;
     /*position: absolute;*/
     width:100%;
@@ -338,8 +338,25 @@ button:focus, textarea:focus{
     margin-top: -1px;
     margin-left: -1px;
 }
+.screen-login h3{
+    margin-top:30px;
+}
+
+.screen-login form{
+    background-color: #fff;
+    border-radius: 6px;
+    padding: 10px;
+    -webkit-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
+    box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
+    margin-top:20px;
+}
+
+.screen-login .form-username{
+    margin-top:20px;
+}
+
 .screen-login input{
-    border: none;
     margin-bottom:20px;
 }
 
@@ -870,6 +887,12 @@ video{
     text-align: center;
     z-index:5000;
     padding-top: 50px;
+}
+
+.appPanel .infoPanelLogo{
+    width:100%;
+    height:120px;
+    background:url('../images/logo.png') center no-repeat;
 }
 
 .appPanel .info-boldText{
