--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -165,6 +165,9 @@ ul{
 
 /* ---------------------------------------------------------- Interaction Styles  */
 
+-webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
+-webkit-tap-highlight-color: transparent;
+
 button, input{
     height:50px;
     margin-bottom:5px;
