--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -164,9 +164,10 @@ ul{
 
 
 /* ---------------------------------------------------------- Interaction Styles  */
-
+body{
 -webkit-tap-highlight-color: rgba(255, 255, 255, 0); 
 -webkit-tap-highlight-color: transparent;
+}
 
 button, input{
     height:50px;
