--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -451,6 +451,8 @@ body::-webkit-scrollbar {
     font-size:150%;
     margin-bottom:0;
     padding:0;
+    -webkit-transform: translateZ(0,0,0);
+    -webkit-backface-visibility: hidden;
     /*-webkit-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
     -moz-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.45);*/
