--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -517,7 +517,11 @@ body::-webkit-scrollbar {
 
 .task-description ul{
     list-style-type: disc;
-    list-style-position: inside;
+    margin-left: 20px;
+}
+
+.task-description li{
+    margin-bottom: 8px;
 }
 
 .modIntroImage{
