--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -944,6 +944,12 @@ video{
     padding-top: 3px !important;
 }
 
+#landscapePrompt{
+    margin-top: 10px; 
+    margin-bottom:20px; 
+    font-family:"Lato-bold";
+}
+
 .appPanel{
     width: 100%;
     height: 100%;
